# gitea-copilot

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: database.py  database_migration.py  main.py  models.py  schemas.py
app/auth/: __init__.py  admin.py  gitea.py  utils.py
app/core/: event_processor.py
app/gitea/: __init__.py  base.py  client.py
app/routes/: __init__.py  admin.py  pages.py
app/skills/: __init__.py  llm_client.py  router.py  tools.py
app/skills/implementations/: __init__.py
app/static/css/: style.css
app/static/js/: app.js
app/tasks/: __init__.py  notification_poller.py  token_manager.py
app/templates/: base.html  index.html
app/templates/admin/: dashboard.html  login.html  oauth_result.html  password.html  register.html  totp_setup.html  totp_status.html
app/utils/: audit.py  encryption.py  qrcode.py  security.py
app/webhooks/: __init__.py  processor.py  receiver.py
tests/: conftest.py  test_auth_utils.py  test_event_processor.py  test_gitea.py  test_llm_client.py  test_migration.py  test_poller.py  test_router.py  test_skills.py  test_utils.py  test_webhooks.py
