[project]
name = "giteacopilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "bcrypt==4.0.1",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "qrcode>=8.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
